--- a/src/css/stylesheet.css
+++ b/src/css/stylesheet.css
@@ -2,46 +2,43 @@
 * {
     font-family: 'Poppins', sans-serif;
     font-style: normal;
+    text-decoration: none !important;
 }
 h1{
     font-weight: 700;
 }
+/* ========== Navbar ========== */
 navbar{
     padding: 30px 128px;
     
 }
 navbar li{
     margin: 0 20px;
+    font-size: 10px;
+    font-size: 18px;    
+}
+navbar a:hover{
+    color: #EB5757 !important;
 }
 .header{
     font-size: 10px;
     font-size: 18px;
 }
-.header a:hover{
-    color: rgb(119, 119, 119);
-}
+
 .btn-login{
     background-color: #EB5757 !important;
     width: 105px;
     height: 44px;
-    left: 1207px;
-    top: 40px;
     border: none;
-    font-family: Poppins;
     font-size: 18px;
-    font-style: normal;
-    font-weight: 500;
-    line-height: 27px;
-    letter-spacing: 0em;
-    color: white;
+    color: rgb(255, 255, 255);
 }
 
 .btn-login:hover{
     background-color: #fc7e7e !important;
 }
-.subtitle{
-    margin-bottom: -18px;
-}
+
+/* ========== HERO ========== */
 .hero{
     margin-top: 50px;
 }
@@ -62,23 +59,31 @@ navbar li{
     color:#222222;
 }
 .btn-explore{    
-width: 215px;
-height: 69px;
-left: 613px;
-top: 516px;
-background: #222222;
-border-radius: 41.5px;
-}
-.btn-explore{
-    font-family: Poppins;
-    font-style: normal;
-    font-weight: 500;
+    width: 215px;
+    height: 69px;
+    left: 613px;
+    top: 516px;
+    background: #222222;
+    border-radius: 41.5px;
     font-size: 24px;
-    text-decoration: none;
     text-align: center;
-    color: #ffff;
+    color: rgb(255, 255, 255);
     margin-top: 34px;
 }
-.btn-explore rounded-pill{
-    margin-top: 10px;
+.btn-explore:hover{
+    color: rgb(173, 173, 173);
+}
+.subtitle{
+    margin-bottom: -18px;
+}
+/* ========== FOOTER ========== */
+.footer-all{
+    margin-top: 70px; 
+    background-color: rgb(255, 255, 255);   
+}
+.footer .text-center p-4{
+    background-color: rgba(0, 0, 0, 0.05);
+}
+.footer-all a:hover{
+    color: #EB5757 !important;
 }
