--- a/src/css/Header.css
+++ b/src/css/Header.css
@@ -1,10 +1,13 @@
-@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@500&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@500&display=swap'); /* font buat tulisan biasa*/
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@700&display=swap'); /* font buat h1 hero */
+
+/* jadi ini di import dua kali, nah manggilnya nanti sesuai urutan */
 * {
-    font-family: 'Poppins', sans-serif;
+    font-family: 'Poppins', sans-serif; /*ini manggil yang poppins weight 500 (yang di import pertama) */
     font-style: normal;
 }
 h1{
-    font-weight: 700;
+    font-family: 'Poppins', sans-serif; /*ini manggil yang poppins weight 700 (yang di import kedua) */
 }
 navbar{
     padding: 30px 128px;
