--- a/src/css/stylesheet.css
+++ b/src/css/stylesheet.css
@@ -106,3 +106,50 @@ copyright{
 copyright a{
     color: #828282;
 }
+/* ========= Content Mengenal + Perkenalan Toko Online =========*/
+.kotak-mengenal{
+    max-width: 80%;
+}
+.icon-mengenal{
+    width: 50px;
+    height: 90px;
+    background: #FFFFFF;
+    box-shadow: 6px 8px 29px rgba(0, 0, 0, 0.1);
+    border-radius: 25px;
+    margin: 20px 40px;
+    margin-left: 0;
+}
+.content-img h2{
+    margin-top: 100px;
+    font-weight: 500;
+    font-size: 36px;
+    line-height: 54px;
+    color: #828282;
+}
+.content-img h1{
+    font-weight: bold;
+    font-size: 64px;
+    line-height: 96px;
+    color: #222222;
+}
+.content-img span{
+    color: #EB5757
+}
+.content-img p{
+    font-weight: 500;
+    font-size: 18px;
+    line-height: 27px;
+    text-align: justify;
+    color: #828282;
+}
+.icon-mengenal embed{
+    width: 80px; 
+    padding-top: 5px;   
+}
+.icon-twitter{
+    margin-top: 9px;          
+}
+.icon-tiktok{
+    padding-left: 6px;
+    height: 80px;
+}
