--- a/src/css/stylesheet.css
+++ b/src/css/stylesheet.css
@@ -173,3 +173,8 @@ copyright a{
     color: rgb(255, 255, 255);
     margin-top: 25px;
 }
+
+/* ============== Big-img ============== */
+.big-img{
+    
+}
