--- a/src/css/stylesheet.css
+++ b/src/css/stylesheet.css
@@ -111,7 +111,8 @@ copyright{
 copyright a{
     color: #828282;
 }
-/* ========= Content Mengenal + Perkenalan Toko Online =========*/
+
+/* ========= Content Mengenal + Perkenalan Toko Online + Video + bergabung =========*/
 .kotak-mengenal{
     max-width: 80%;
 }
@@ -128,13 +129,13 @@ copyright a{
     margin-top: 100px;
     font-weight: 500;
     font-size: 36px;
-    line-height: 54px;
+    line-height: 20px;
     color: #828282;
 }
 .content-img h1{
     font-weight: bold;
     font-size: 64px;
-    line-height: 96px;
+    line-height: 80px;
     color: #222222;
 }
 .content-img span{
@@ -143,7 +144,7 @@ copyright a{
 .content-img p{
     font-weight: 500;
     font-size: 18px;
-    line-height: 27px;
+    line-height: 20px;
     text-align: justify;
     color: #828282;
 }
@@ -158,7 +159,23 @@ copyright a{
     padding-left: 6px;
     height: 80px;
 }
+.content-img button{
+        background-color: #EB5757 !important;
+        width: 195px;
+        height: 55px;
+        border: none;
+        font-size: 18px;
+        color: rgb(255, 255, 255);
+        margin-top: 25px;
+}
 
+/* =========== Video =========== */
+.content-img iframe{
+    margin-top: 70px;
+    border-radius: 20px;
+    height: 450px;
+    width: 700px;
+}
 /* ============= Landing Page - Blog ============= */
 .landing-blog h1{
     font-weight:bolder;
