--- a/src/css/App.css
+++ b/src/css/App.css
@@ -1,5 +1,63 @@
+.b-example-divider {
+    height: 3rem;
+    background-color: rgb(255, 251, 0);
+    border: solid rgba(0, 0, 0, .15);
+    border-width: 1px 0;
+    box-shadow: inset 0 .5em 1.5em rgba(0, 0, 0, .1), inset 0 .125em .5em rgba(0, 0, 0, .15);
+  }
+
 * {
     box-sizing: border-box;
     margin: 0;
     padding: 0;
 }
+
+@font-face {
+  font-family: 'Varsity';
+  font-style: normal;
+  font-weight: normal;
+  src: local('Varsity'), url('../assets/fonts/VarsityTeam-Bold.otf') format('opentype');
+}
+
+.varsity-text {
+  font-family: Varsity Team;
+  font-style: normal;
+  font-weight: bold;
+  font-size: 64px;
+  line-height: 70px;
+  letter-spacing: 0.08em;
+}
+
+.text-red {
+  color: #D85252;
+}
+
+.glass {
+  background: rgba( 0, 0, 0, 0.25 );
+  box-shadow: 0 8px 32px 0 rgba(255, 255, 255, 0.37);
+  backdrop-filter: blur( 4px );
+  -webkit-backdrop-filter: blur( 4px );
+  border-radius: 10px;
+  border: 1px solid rgba( 255, 255, 255, 0.18 );
+}
+
+.shake {
+	animation: shake-animation 4.72s ease infinite;
+	transform-origin: 50% 50%;
+  }
+  .element {
+    margin: 0 auto;
+    width: 150px;
+    height: 150px;
+    background: red;
+    }
+    @keyframes shake-animation {
+     0% { transform:translate(0,0) }
+    1.78571% { transform:translate(5px,0) }
+    3.57143% { transform:translate(0,0) }
+    5.35714% { transform:translate(5px,0) }
+    7.14286% { transform:translate(0,0) }
+    8.92857% { transform:translate(5px,0) }
+    10.71429% { transform:translate(0,0) }
+    100% { transform:translate(0,0) }
+    }
