--- a/src/css/Footers.css
+++ b/src/css/Footers.css
@@ -1,11 +1,3 @@
-.b-example-divider {
-  height: 3rem;
-  background-color: rgba(0, 0, 0, .1);
-  border: solid rgba(0, 0, 0, .15);
-  border-width: 1px 0;
-  box-shadow: inset 0 .5em 1.5em rgba(0, 0, 0, .1), inset 0 .125em .5em rgba(0, 0, 0, .15);
-}
-
 .bg-dark-cs {
   background-color: #000;
   color: white;
@@ -41,7 +33,7 @@ li a {
 }
 
 .bg-mokleters {
-  background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)),url("../assets/bg.png");
+  background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)),url("../assets/footer/bg.png");
   height: 50%;
   background-position: 100% 35%;
   background-repeat: no-repeat;
