--- a/src/css/Join-us.css
+++ b/src/css/Join-us.css
@@ -27,7 +27,7 @@
   text-decoration: none;
 }
 
-.btn {
+/* .btn {
   font-family: Montserrat!important;
   font-style: normal!important;
   font-weight: 500!important;
@@ -43,4 +43,4 @@
 .btn-danger:hover {
   background-color: #b63f3f!important;
   border-color: #b63f3f!important;
-}
+} */
