--- a/src/css/Blog.css
+++ b/src/css/Blog.css
@@ -3,8 +3,15 @@
     padding-bottom: 7rem !important;
 }
 
+.hover{
+  transition: all .2s ease-in-out;
+  z-index:1;
+}
+
 .hover:hover {
+  transform: scale(1.1);
   box-shadow: 0px 0px 100px rgba(212, 138, 138, 0.61);
+  z-index:3;
 }
 
 .hover-active {
