--- a/src/css/About.scoped.css
+++ b/src/css/About.scoped.css
@@ -2,11 +2,11 @@
 
 .about{
     margin: 0;
-    margin-top: 0;
+    margin-top: -211px;
     padding: 0;
     color: #FFFFFF;
     width: 100%;
-    height: 74.3vh;
+    height: 60.3vh;
     box-sizing: border-box;
     position: relative !important;
 }
