--- a/src/css/Blog.css
+++ b/src/css/Blog.css
@@ -26,4 +26,6 @@
 .nopadding {
   padding: 0 !important;
   margin: 0 !important;
+  margin-right: 0.5rem!important;
+  margin-left: 0.5rem!important;
 }
