--- a/src/css/Organization.css
+++ b/src/css/Organization.css
@@ -63,14 +63,94 @@ section{
 }
 .cardd .cardd-img{
     width: 300px;
-    height: 200px;
+    height: 170px;
     overflow: hidden;
 }
 
 .cardd-img img{
+    height: 100px;
     margin: 50px 33%;
 }
+/* CUSTOM CARD LOGO - IMG KARENA BEDA UKURAN */
 
+.pustel-img{
+    margin: 50px 28% !important;
+}
+
+.metic-img{
+    width: 250px;
+    margin: 50px 10% !important;
+}
+.mac-img{
+    width: 500px !important;
+    height: 500px !important;
+    margin: 20px 0% !important;
+}
+.palwaga-img{
+    width: 300px !important;
+    height: 130px !important;
+    margin: 40px 0% !important;
+}
+.pmr-img{
+    width: 300px !important;
+    height: 120px !important;
+    margin: 50px 0% !important;
+}
+.tsbc-img{
+    width: 300px !important;
+    height: 120px !important;
+    margin: 50px 0% !important;
+}
+.tscc-img{
+    width: 200px !important;
+    height: 300px !important;
+    margin: 25px 16% !important;
+}
+.tsfc-img{
+    margin: 50px 25% !important;
+}
+.tsvc-img{
+    width: 100px !important;
+    height: 200px !important;
+    margin: 15px 33% !important;
+}
+.modal-metic{
+    height: 90px;
+    margin: 7vh 50px;
+}
+.modal-pustel{
+    height: 130px;
+    margin: 7vh 148px;
+}
+.modal-mac{
+    height: 200px;
+    margin: 4vh 135px;
+}
+.modal-palwaga{
+    height: 200px;
+    margin: 4vh 175px;
+}
+.modal-pmr{
+    height: 150px;
+    margin: 4vh 189px;
+}
+.modal-tsbc{
+    height: 150px;
+    margin: 4vh 156px;
+}
+.modal-tscc{
+    height: 200px;
+    margin: 4vh 135px;
+}
+.modal-tsfc{
+    height: 150px;
+    margin: 4vh 117px;
+}
+.modal-tsvc{
+    height: 200px;
+    margin: 4vh 155px;
+}
+/* ============= END ============ */
 .cardd-body{
     height: 200px;    
     text-align: justify;
@@ -143,15 +223,22 @@ section{
 .modal{
     display: block;
 }
+.modal-content{
+    border-top: none;
+    border-radius: 5px!important;
+}
 .modal-dialog{
-    border-top: #D75252 solid 5px;
+     
 }
 .modal-header{
-    border: none !important;    
+    border: none !important; 
+    border-top: #D75252 solid 5px !important;
+    border-width: 100% !important;
+    border-radius: 4px 4px 0 0 !important;  
+    padding: 0;       
 }
 .modal h1{
     font-size: 5vh;
-    color: #D75252;
     text-align: center;
     margin-bottom: 20px;
 }
@@ -166,7 +253,7 @@ section{
 }
 .modal-logo{
     height: 120px;
-    margin: 7vh 11vw;
+    margin: 7vh 170px;
 }
 @media screen and (max-width: 1270px){
     .cardd{
@@ -187,6 +274,51 @@ section{
         width: 75px;
         margin: 50px 60px;
     }
+    /* CUSTOM CARD LOGO - IMG KARENA BEDA UKURAN */
+    .pustel-img{
+        margin: 50px 22% !important;
+    }
+
+    .metic-img{
+        width: 140px !important;
+        margin: 50px 10% !important;
+    }
+    .mac-img{
+        width: 120px !important;
+        height: 120px !important;
+        margin: 40px 14% !important;
+    }
+    .palwaga-img{
+        width: 200px !important;
+        height: 100px !important;
+        margin: 50px 0% !important;
+    }
+    .pmr-img{
+        width: 200px !important;
+        height: 100px !important;
+        margin: 55px 0% !important;
+    }
+    .tsbc-img{
+        width: 200px !important;
+        height: 110px !important;
+        margin: 50px 0% !important;
+    }
+    .tscc-img{
+        width: 130px !important;
+        height: 300px !important;
+        margin: 25px 13% !important;
+    }
+    .tsfc-img{
+        width: 130px !important;
+        height: 300px !important;
+        margin: 22px 12% !important;
+    }
+    .tsvc-img{
+        width: 100px !important;
+        height: 200px !important;
+        margin: 15px 16% !important;
+    }
+    /* ============= END ============ */
     .varsity-text{    
         font-size: 45px;
     }
@@ -205,7 +337,7 @@ section{
 
 @media screen and (max-width: 760px){
     .cardd{
-        width: 150px;
+        width: 170px;
         margin: 0 13vw;        
     }    
     .cardd-body{
@@ -213,11 +345,62 @@ section{
     }
     .cardd-img img{
         width: 65px;        
-        margin: 50px 40px;   
+        margin: 50px 51px;   
     }
+    .cardd span{
+        opacity: 1;         
+    }
+    .cardd atas{
+        opacity: 1;
+    }
+    /* CUSTOM CARD LOGO - IMG KARENA BEDA UKURAN */
+    .pustel-img{
+        margin: 50px 17% !important;
+    }
+
+    .metic-img{
+        width: 110px !important;
+        margin: 50px 10% !important;
+    }
+    .mac-img{
+        width: 100px !important;
+        height: 100px !important;
+        margin: 45px 12% !important;
+    }
+    .palwaga-img{
+        width: 110px !important;
+        height: 90px !important;
+        margin: 50px 9% !important;
+    }
+    .pmr-img{
+        width: 150px !important;
+        height: 80px !important;
+        margin: 55px 3% !important;
+    }
+    .tsbc-img{
+        width: 150px !important;
+        height: 90px !important;
+        margin: 50px 4% !important;
+    }
+    .tscc-img{
+        width: 100px !important;
+        height: 200px !important;
+        margin: 20px 12% !important;
+    }
+    .tsfc-img{
+        width: 100px !important;
+        height: 300px !important;
+        margin: 20px 12% !important;
+    }
+    .tsvc-img{
+        width: 100px !important;
+        height: 100px !important;
+        margin: 40px 12% !important;
+    }
+    /* ============= END ============ */
     .cardd .cardd-img{
         height: 160px;
-    }
+    }    
     .varsity-text{    
         font-size: 45px;
     }
@@ -241,5 +424,77 @@ section{
     .cardd{
         width: 200px;
         margin: 0 30vw;        
-    }  
+    }
+        /* CUSTOM CARD LOGO - IMG KARENA BEDA UKURAN */
+        .pustel-img{
+            width: 100px !important;
+            margin: 45px 17% !important;
+        }
+    
+        .metic-img{
+            width: 160px !important;
+            margin: 50px 7% !important;
+        }
+        .mac-img{
+            width: 100px !important;
+            height: 100px !important;
+            margin: 45px 16% !important;
+        }
+        .palwaga-img{
+            width: 110px !important;
+            height: 90px !important;
+            margin: 50px 13% !important;
+        }
+        .pmr-img{
+            width: 150px !important;
+            height: 90px !important;
+            margin: 49px 7% !important;
+        }
+        .tsbc-img{
+            width: 150px !important;
+            height: 90px !important;
+            margin: 50px 7% !important;
+        }
+        .tscc-img{
+            width: 130px !important;
+            height: 200px !important;
+            margin: 20px 12% !important;
+        }
+        .tsfc-img{
+            width: 130px !important;
+            height: 300px !important;
+            margin: 17px 12% !important;
+        }
+        .tsvc-img{
+            width: 100px !important;
+            height: 100px !important;
+            margin: 40px 17% !important;
+        }
+        /* ============= END ============ */  
+}
+@media screen and (max-width: 480px){
+    .cardd{
+        width: 200px;
+        margin: 0 28vw;        
+    }
+    .varsity-text{
+        font-size: 30px;
+    }
+    .alice-carousel__dots-item,
+    .alice-carousel__dots-item.__active{
+        margin-top: 30px !important;        
+        height: 2.7px !important;        
+    }
+    .alice-carousel__dots-item{        
+        width: 17px !important;
+    }
+    .alice-carousel__dots-item.__active{        
+        width: 30px !important;
+    }
+}
+@media screen and (max-width: 370px){
+    .cardd{
+        width: 200px;
+        margin: 0 22vw;        
+    }
 }
