--- a/src/css/App.css
+++ b/src/css/App.css
@@ -49,7 +49,7 @@
 }
 
 .varsity-text {
-  font-family: Varsity Team;
+  font-family: Varsity;
   font-style: normal;
   font-weight: bold;
   font-size: 64px;
